--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: React build
+name: Build & Deploy
 on: 
   push:
     branches:
@@ -14,8 +14,7 @@ jobs:
 
       - id: Build
         run: |
-          rm -rf build
-          mkdir build
+          [ -d build ] && rm -rf build && mkdir build
           echo "`date "+%Y-%m-%d %H:%M"`" > build/date.txt
           git add build
           git commit -m ":zap: build at `date "+%Y-%m-%d %H:%M"`" && git push
