--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - run: git log -1 --format='%H'
 
       - id: Deploy
         run: |
